--- a/solve.html
+++ b/solve.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>حل دستگاه معادلات</title>
-    <link rel="stylesheet" href="style.css"> <!-- فایل استایل -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -28,7 +28,7 @@
         <h2>نتیجه:</h2>
         <p id="result"></p>
     </div>
-<!-- کد جاوااسکریپت برای حل معادله -->
+
     <script src="solve.js"></script> 
 
     <script src="lang.js"></script>
